# f1lakehouse

./: .gitignore  config.py  pyproject.toml
src/: collect.py  main.py  sender.py
